Fix about-images responsiveness on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -836,10 +836,15 @@ span {
     .about-images {
         margin: 0 auto;
         max-width: 500px;
+        width: 100%;
     }
 }
 
 @media (max-width: 768px) {
+    .about-images {
+        height: 400px;
+    }
+
     .hamburger {
         display: flex;
     }
@@ -875,5 +880,11 @@ span {
 
     .contact-form-container {
         padding: 2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .about-images {
+        height: 300px;
     }
 }
